Prevent horizontal bouncing on the upload page on iOS

--- a/ui/src/app/components/upload/upload.component.scss
+++ b/ui/src/app/components/upload/upload.component.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  > div {
+    overflow-x: hidden;
+  }
 }
 
 .file-input {
